Added the assets word in Swagger and the Python code. It has however to be tested out.
